Filter upcoming events to display on Home page

--- a/source/index.njk
+++ b/source/index.njk
@@ -59,12 +59,12 @@ stylesheets:
         <div class="UpcomingEvents">
             <h2 class="UpcomingEvents__Label">Upcoming Events</h2>
 
-            {%- for event in events %}
+            {%- for event in (events | filterUpcomingEvents | firstTwoEvents) %}
                 <article class="Event">
                     <h3 class="Event__Title">{% externalLink event.name, event.url %}</h1>
                     <h4 class="Event__Subtitle">{{ event.description }}</h2>
 
-                    <time class="Event__Date" datetime="2019-05-11">{{ event.date }}</time>
+                    <time class="Event__Date" datetime="2019-05-11">{{ event.start_date }}</time>
                     <data class="Event__Venue">{{ event.venue }}</data>
                 </article>
             {% endfor -%}
