--- a/source/events.njk
+++ b/source/events.njk
@@ -11,3 +11,39 @@ stylesheets:
         a workshop at your event, please feel free to <a href="mailto:arnellebalane@gmail.com">get in touch</a>.
     </p>
 </div>
+
+<section class="Section">
+    <div class="l-Wrapper">
+        <h1 class="Section__Title">Upcoming Events</h1>
+
+        <ol class="Events">
+            {%- for event in (events | filterUpcomingEvents) %}
+            <li class="Event">
+                <h2 class="Event__Title">{% externalLink event.name, event.url %}</h2>
+                <h3 class="Event__Subtitle">{{ event.description }}</h3>
+
+                <time class="Event__Date" datetime="{{ event.start_date }}">{{ event.start_date }}</time>
+                <data class="Event__Venue">{{ event.venue }}</data>
+            </li>
+            {% endfor -%}
+        </ol>
+    </div>
+</section>
+
+<section class="Section">
+    <div class="l-Wrapper">
+        <h1 class="Section__Title">Previous Events</h1>
+
+        <ol class="Events">
+            {%- for event in (events | filterPastEvents) %}
+            <li class="Event">
+                <h2 class="Event__Title">{% externalLink event.name, event.url %}</h2>
+                <h3 class="Event__Subtitle">{{ event.description }}</h3>
+
+                <time class="Event__Date" datetime="{{ event.start_date }}">{{ event.start_date }}</time>
+                <data class="Event__Venue">{{ event.venue }}</data>
+            </li>
+            {% endfor -%}
+        </ol>
+    </div>
+</section>
