--- a/source/static/stylesheets/pages/events.css
+++ b/source/static/stylesheets/pages/events.css
@@ -60,6 +60,6 @@
 
 @media (min-width: 1188px) {
     .Events {
-        grid-template-columns: repeat(3, 1fr)
+        grid-template-columns: repeat(3, 1fr);
     }
 }
