Minor UI tweaks for Avatar and Footer elements

--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -42,7 +42,7 @@
             <div class="l-Wrapper">
                 <p class="Footer__Copyright">&copy; 2019 Arnelle Balane. All Rights Reserved.</p>
                 <small class="Footer__BuiltWith">
-                    This site is built with {% externalLink 'Eleventy', 'https://www.11ty.io/' %} and hosted on {% externalLink 'Netlify', 'https://www.netlify.com/' %}.<br>
+                    This site is built with {% externalLink 'Eleventy', 'https://www.11ty.io/' %} and hosted on {% externalLink 'Netlify', 'https://www.netlify.com/' %}.
                     The source code is hosted on {% externalLink 'Github', 'https://github.com/' %}.
                 </small>
             </div>
