--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -26,6 +26,9 @@
                 </a>
                 {% endif -%}
 
+                <input type="checkbox" class="MenuToggle__Checkbox" id="MenuToggle" autocomplete="off">
+                <label class="MenuToggle" for="MenuToggle"></label>
+
                 <nav class="Navigation">
                     <a class="Navigation__Item {% if page.url.startsWith('/articles') %}Navigation__Item--active{% endif %}" href="/articles">Articles</a>
                     <a class="Navigation__Item {% if page.url.startsWith('/projects') %}Navigation__Item--active{% endif %}" href="/projects">Projects</a>
