--- a/source/events.njk
+++ b/source/events.njk
@@ -18,15 +18,21 @@ stylesheets:
         <h1 class="Section__Title">Upcoming Events</h1>
 
         <ol class="Events">
-            {%- for event in (events | filterUpcomingEvents) %}
-            <li class="Event Item">
-                <h2 class="Item__Name">{% externalLink event.name, event.url %}</h2>
-                <h3 class="Item__Description">{{ event.description }}</h3>
+            {% if (events | filterUpcomingEvents).length > 0 %}
+                {%- for event in (events | filterUpcomingEvents) %}
+                <li class="Event Item">
+                    <h2 class="Item__Name">{% externalLink event.name, event.url %}</h2>
+                    <h3 class="Item__Description">{{ event.description }}</h3>
 
-                <time class="Item__Date" datetime="{{ event.start_date }}">{{ event.start_date }}</time>
-                <data class="Item__Data">{{ event.venue }}</data>
-            </li>
-            {% endfor -%}
+                    <time class="Item__Date" datetime="{{ event.start_date }}">{{ event.start_date }}</time>
+                    <data class="Item__Data">{{ event.venue }}</data>
+                </li>
+                {% endfor -%}
+            {% else %}
+                <li class="PageDescription NoEvents">
+                    <p>I don't have any upcoming events at the moment.</p>
+                </li>
+            {% endif %}
         </ol>
     </div>
 </section>
