Add IO Extended Cebu 2019 to events data

--- a/source/index.njk
+++ b/source/index.njk
@@ -67,7 +67,7 @@ stylesheets:
                     <h4 class="Item__Description">{{ event.description }}</h4>
 
                     <time class="Item__Date" datetime="2019-05-11">{{ event.start_date }}</time>
-                    <data class="Item__Venue">{{ event.venue }}</data>
+                    <data class="Item__Data">{{ event.venue }}</data>
                 </article>
                 {% endfor -%}
 
