Add link to Github profile from Projects page

--- a/source/projects.njk
+++ b/source/projects.njk
@@ -7,9 +7,9 @@ stylesheets:
 ---
 
 <div class="l-Wrapper l-LeftTwoThirds">
-    <p class="PageDescription">
-        Here's a list of some of the projects that I've worked on, both professional and personal. If you want to learn
-        more about them, feel free to <a href="mailto:arnellebalane@gmail.com">get in touch</a>.
+    <p>
+        Here are some of the projects that I've worked on, including professional projects and my own
+        personal side projects.
     </p>
 </div>
 
@@ -57,5 +57,14 @@ stylesheets:
             </li>
             {% endfor -%}
         </ol>
+    </div>
+</section>
+
+<section class="Section">
+    <div class="l-Wrapper l-LeftTwoThirds">
+        <p>
+            See more of my projects, tools, libraries, and demos over at my
+            {% externalLink 'GitHub profile', 'https://github.com/arnellebalane' %}.
+        </p>
     </div>
 </section>
