Add Footer to main layout partial

--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -22,6 +22,10 @@
 
         <div class="Wrapper">
             {{ content | safe }}
+
+            <footer class="Footer">
+                <small>&copy; Copyright 2019 Arnelle Balane</small>
+            </footer>
         </div>
     </body>
 </html>
