Add markup and update styles for Events page

--- a/source/index.njk
+++ b/source/index.njk
@@ -2,7 +2,7 @@
 layout: layouts/main.njk
 stylesheets:
     - /static/stylesheets/pages/index.css
-    - /static/stylesheets/components/lists.css
+    - /static/stylesheets/components/items.css
 ---
 
 <Section class="Section Hero">
@@ -33,7 +33,7 @@ stylesheets:
     </div>
 </Section>
 
-<section class="Section About">
+<section class="Section">
     <h2 class="fs-24 fw-900">About Me</h2>
 
     <p>
@@ -84,7 +84,7 @@ stylesheets:
     <p>The <a href="/events">events page</a> contains a list of my previous talks and workshops.</p>
 </section>
 
-<section class="Section Contact">
+<section class="Section">
     <h2 class="fs-24 fw-900">Get In Touch</h2>
 
     <p>
