--- a/source/static/stylesheets/components/items.css
+++ b/source/static/stylesheets/components/items.css
@@ -1,6 +1,6 @@
 .Items {
     padding: 0;
-    padding-left: 5rem;
+    margin-top: 2.4rem;
     margin-bottom: 3rem;
     list-style: none;
 }
@@ -28,4 +28,5 @@
 
 .Item__Subheading {
     margin: 0;
+    font-size: 1.8rem;
 }
