Add markup and styles for Projects page

--- a/source/events.njk
+++ b/source/events.njk
@@ -10,7 +10,7 @@ stylesheets:
 </p>
 
 <section class="Section">
-    <h2 class="fs-24 fw-900">Upcoming Events</h2>
+    <h2 class="Section__Title fs-24 fw-900">Upcoming Events</h2>
 
     <ol class="Items">
         <li class="Item">
@@ -38,7 +38,7 @@ stylesheets:
 </section>
 
 <section class="Section">
-    <h2 class="fs-24 fw-900">Previous Events</h2>
+    <h2 class="Section__Title fs-24 fw-900">Previous Events</h2>
 
     <ol class="Items">
         <li class="Item">
