Update font sizes to use utility classes

--- a/source/_includes/layouts/main.njk
+++ b/source/_includes/layouts/main.njk
@@ -14,10 +14,10 @@
 
     <body>
         <nav class="Navigation">
-            <a class="Navigation__Link" href="/">Home</a>
-            <a class="Navigation__Link" href="/blog">Blog</a>
-            <a class="Navigation__Link" href="/events">Events</a>
-            <a class="Navigation__Link" href="/projects">Projects</a>
+            <a class="Navigation__Link fs-18" href="/">Home</a>
+            <a class="Navigation__Link fs-18" href="/blog">Blog</a>
+            <a class="Navigation__Link fs-18" href="/events">Events</a>
+            <a class="Navigation__Link fs-18" href="/projects">Projects</a>
         </nav>
 
         <div class="Wrapper">
