--- a/source/blog.njk
+++ b/source/blog.njk
@@ -14,10 +14,10 @@ stylesheets:
 <section class="Section Blog">
     <ol class="Items">
         <li class="Item">
-            <time class="Item__Date">01/20</time>
+            <time class="Item__Date fs-16">01/20</time>
             <div>
-                <a class="Item__Heading" href='#' rel="noopener noreferrer">Building a site navigation menu using React Hooks</a>
-                <ul class="Item__Tags">
+                <a class="Item__Heading fw-700" href='#' rel="noopener noreferrer">Building a site navigation menu using React Hooks</a>
+                <ul class="Item__Tags fs-16">
                     <li>#vuejs</li>
                     <li>#vue-cli</li>
                     <li>#indexeddb</li>
@@ -25,10 +25,10 @@ stylesheets:
             </div>
         </li>
         <li class="Item">
-            <time class="Item__Date">01/20</time>
+            <time class="Item__Date fs-16">01/20</time>
             <div>
-                <a class="Item__Heading" href='#' rel="noopener noreferrer">Building a site navigation menu using React Hooks</a>
-                <ul class="Item__Tags">
+                <a class="Item__Heading fw-700" href='#' rel="noopener noreferrer">Building a site navigation menu using React Hooks</a>
+                <ul class="Item__Tags fs-16">
                     <li>#vuejs</li>
                     <li>#vue-cli</li>
                     <li>#indexeddb</li>
@@ -36,10 +36,10 @@ stylesheets:
             </div>
         </li>
         <li class="Item">
-            <time class="Item__Date">01/20</time>
+            <time class="Item__Date fs-16">01/20</time>
             <div>
-                <a class="Item__Heading" href='#' rel="noopener noreferrer">Building a site navigation menu using React Hooks</a>
-                <ul class="Item__Tags">
+                <a class="Item__Heading fw-700" href='#' rel="noopener noreferrer">Building a site navigation menu using React Hooks</a>
+                <ul class="Item__Tags fs-16">
                     <li>#vuejs</li>
                     <li>#vue-cli</li>
                     <li>#indexeddb</li>
@@ -47,10 +47,10 @@ stylesheets:
             </div>
         </li>
         <li class="Item">
-            <time class="Item__Date">01/20</time>
+            <time class="Item__Date fs-16">01/20</time>
             <div>
-                <a class="Item__Heading" href='#' rel="noopener noreferrer">Building a site navigation menu using React Hooks</a>
-                <ul class="Item__Tags">
+                <a class="Item__Heading fw-700" href='#' rel="noopener noreferrer">Building a site navigation menu using React Hooks</a>
+                <ul class="Item__Tags fs-16">
                     <li>#vuejs</li>
                     <li>#vue-cli</li>
                     <li>#indexeddb</li>
@@ -58,10 +58,10 @@ stylesheets:
             </div>
         </li>
         <li class="Item">
-            <time class="Item__Date">01/20</time>
+            <time class="Item__Date fs-16">01/20</time>
             <div>
-                <a class="Item__Heading" href='#' rel="noopener noreferrer">Building a site navigation menu using React Hooks</a>
-                <ul class="Item__Tags">
+                <a class="Item__Heading fw-700" href='#' rel="noopener noreferrer">Building a site navigation menu using React Hooks</a>
+                <ul class="Item__Tags fs-16">
                     <li>#vuejs</li>
                     <li>#vue-cli</li>
                     <li>#indexeddb</li>
