--- a/source/index.njk
+++ b/source/index.njk
@@ -59,24 +59,24 @@ stylesheets:
 
     <ol class="Items">
         <li class="Item">
-            <time class="Item__Date">08/24</time>
+            <time class="Item__Date fs-16">08/24</time>
             <div>
                 <a class="Item__Heading" href='#' rel="noopener noreferrer">VueJS Cebu Meetup</a>
-                <p class="Item__Subheading">Talk: Firebase Workshop</p>
+                <p class="Item__Subheading fs-18">Talk: Firebase Workshop</p>
             </div>
         </li>
         <li class="Item">
-            <time class="Item__Date">09/13</time>
+            <time class="Item__Date fs-16">09/13</time>
             <div>
                 <a class="Item__Heading" href='#' rel="noopener noreferrer">GDG Bacolod: Angular + Firebase Codelabs</a>
-                <p class="Item__Subheading">Workshop: Angular + Firebase</p>
+                <p class="Item__Subheading fs-18">Workshop: Angular + Firebase</p>
             </div>
         </li>
         <li class="Item">
-            <time class="Item__Date">09/14</time>
+            <time class="Item__Date fs-16">09/14</time>
             <div>
                 <a class="Item__Heading" href='#' rel="noopener noreferrer">GDG Bacolod: Angular + Firebase Codelabs</a>
-                <p class="Item__Subheading">Workshop: Angular + Firebase</p>
+                <p class="Item__Subheading fs-18">Workshop: Angular + Firebase</p>
             </div>
         </li>
     </ol>
